Linked progress.css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Custom Video Player</title>
+    <link href="css/progress.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
