--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Custom Video Player</title>
+    <link crossorigin="anonymous"
+          href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css"
+          integrity="undefined" rel="stylesheet">
     <link href="css/progress.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
