--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+<h1>Custom Video Player</h1>
+<video class="screen" id="video" poster="img/poster.png" src="videos/gone.mp4"></video>
+<div class="controls">
+    <button class="btn" id="play">
+        <i class="fa fa-play fa-2x"></i>
+    </button>
+    <button class="btn" id="stop">
+        <i class="fa fa-stop fa-2x"></i>
+    </button>
+    <input class="progress" id="progress" max="100" min="0" step="0.1" type="range" value="0">
+    <span class="timestamp" id="timestamp">00:00</span>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
